# batdetect2

./: .gitignore  pyproject.toml
bat_detect/: __init__.py  command.py
