[tool.pdm]

[project]
name = "batdetect2"
version = "0.1.0"
description = ""
authors = [
]
dependencies = [
    "librosa",
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "torch",
    "torchaudio",
    "torchvision"
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "CC-by-nc-4"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project.scripts]
batdetect2 = "bat_detect.command:main"
